force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <label>Questions</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>