force-app/main/default/objects/Questions__c/fields/Answer_Options__c.field-meta.xml
<CustomField>
    <fullName>Answer_Options__c</fullName>
    <description>This field is used to display answers as options if the data type is selected as Picklist</description>
    <inlineHelpText>Please enter each option in a new line when you choose either &quot;Picklist&quot; or &quot;Picklist with Radio Options&quot; as data type</inlineHelpText>
    <label>Answer Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>