force-app/main/default/objects/Questions__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>This field is used to determine the data type for the answer entered in the web form</description>
    <inlineHelpText>Please choose the appropriate value based on the question value entered</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text Field (Max 255 Single Line)</label>
            </value>
            <value>
                <fullName>Text Area</fullName>
                <label>Text Area (Max 255 Multi Line)</label>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
                <label>Long Text Area (Max 32,768)</label>
            </value>
            <value>
                <fullName>Rich Text Area</fullName>
                <label>Rich Text Area (Max 32,768)</label>
            </value>
            <value>
                <fullName>Number</fullName>
                <label>Number Field</label>
            </value>
            <value>
                <fullName>Currency</fullName>
                <label>Currency Field</label>
            </value>
            <value>
                <fullName>Date</fullName>
                <label>Date Field</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Phone Field</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
                <label>Picklist Field</label>
            </value>
            <value>
                <fullName>Picklist with Radio Options</fullName>
                <label>Picklist Field with Radio Options</label>
            </value>
            <value>
                <fullName>Dependent Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>