force-app/main/default/objects/Questions__c/fields/Default_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Text__c</fullName>
    <description>This field is used to populate the default answer for the Question in the webform.</description>
    <inlineHelpText>Please enter the default answer if you want to automatically default this answer in the web form. For Date use (YYYY-MM-DD) format.</inlineHelpText>
    <label>Default Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>