force-app/main/default/objects/Questions__c/fields/Dependent_Answer_is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Answer_is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the dependent answer is mandatory or not</description>
    <label>Dependent Answer is Mandatory?</label>
    <type>Checkbox</type>
</CustomField>