force-app/main/default/objects/Questions__c/fields/Dependent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_API_Name__c</fullName>
    <description>Used to store the API name of the Dependent picklist field</description>
    <inlineHelpText>Used to store the API name of the Dependent picklist field</inlineHelpText>
    <label>Dependent Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>