force-app/main/default/objects/Questions__c/fields/Dependent_Field_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_Question__c</fullName>
    <description>Used to store the question of the dependent picklist field</description>
    <label>Dependent Field Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>