force-app/main/default/objects/Questions__c/fields/Dependent_Question_Setup__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question_Setup__c</fullName>
    <description>Used to store the Dependent picklist values with respect to the controlling field value</description>
    <inlineHelpText>WARNING: This field must be configured by your Salesforce Administrator. Please contact LED team for more details</inlineHelpText>
    <label>Dependent Question Setup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>