force-app/main/default/objects/Questions__c/fields/Even_Registration_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Even_Registration_Field_API_Name__c</fullName>
    <description>This field is used to identify API Name of the field in Event Registration used map the answer given through the web form</description>
    <inlineHelpText>Please choose a appropriate field API from Event Registration object for this question</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>