force-app/main/default/objects/Questions__c/fields/Event_Question_Set__c.field-meta.xml
<CustomField>
    <fullName>Event_Question_Set__c</fullName>
    <description>This field is to relate question record to Event Question Set record</description>
    <inlineHelpText>Please choose appropriate Event Question Set for this record</inlineHelpText>
    <label>Event Question Set</label>
    <referenceTo>Event_Question_Set__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>