force-app/main/default/objects/Questions__c/fields/Hide_Question__c.field-meta.xml
<CustomField>
    <fullName>Hide_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to hide questions from the webform.</description>
    <inlineHelpText>Please check if this Question needs to be hidden from the webform, any value entered in the &apos;Default Text&apos; field will be stored in the respective Event Registration/Campaign Member field.</inlineHelpText>
    <label>Hide Question</label>
    <type>Checkbox</type>
</CustomField>