force-app/main/default/objects/Questions__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to determine whether the question should be a mandatory</description>
    <inlineHelpText>Please check if the question needs to be mandatory in the web form</inlineHelpText>
    <label>Is Mandatory?</label>
    <type>Checkbox</type>
</CustomField>