force-app/main/default/objects/Questions__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>When entering the values as
Picklist Value Label = Object Label
Picklist Value API Name = Object API Name</description>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event_Registration__c</fullName>
                <label>Event Registration</label>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
                <label>Campaign Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>