force-app/main/default/objects/Questions__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>This field holds the question that needs to displayed in the web forms</description>
    <inlineHelpText>Please enter a appropriate question for related Event Question Set</inlineHelpText>
    <label>Question</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>