force-app/main/default/objects/Questions__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <description>This field is used to define the order of respective question displayed in the web forms</description>
    <inlineHelpText>Please enter a question order for this question</inlineHelpText>
    <label>Question Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>