force-app/main/default/objects/Questions__c/fields/Show_Only_Text__c.field-meta.xml
<CustomField>
    <fullName>Show_Only_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used just to show a block of text instead of a Question in the webform</description>
    <inlineHelpText>Please check this if you just want to show text entered in the &apos;Default Text&apos; field</inlineHelpText>
    <label>Show Only Text</label>
    <type>Checkbox</type>
</CustomField>