force-app/main/default/objects/Questions__c/fields/Text_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Text_To_Display__c</fullName>
    <description>This field is used to show the content entered in the field as read only text in the web form.</description>
    <inlineHelpText>This field is used to show the content entered in the field as read only text in the web form.</inlineHelpText>
    <label>Text To Display</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>