force-app/main/default/objects/Questions__c/validationRules/Key_Fields_Should_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Key_Fields_Should_Not_Empty</fullName>
    <active>true</active>
    <description>Following should not be blank Object , Field API Name, Data Type</description>
    <errorConditionFormula>AND(
 NOT(Show_Only_Text__c),
 OR(
  ISPICKVAL(Object__c,&apos;&apos;),
  ISPICKVAL(Data_Type__c, &apos;&apos;),
  ISBLANK(Even_Registration_Field_API_Name__c))
)</errorConditionFormula>
    <errorMessage>Object, Data Type, Field API Name fields should not be blank</errorMessage>
</ValidationRule>